# T3.2

./: CMakeLists.txt  README.md  config.py  detector.py  frame_interface.py  gesture_analyzer.py  gesture_detector.cpp  gesture_detector.py  gesture_standalone.py  gesture_yolo11n_pose.espdl  http_stream.py  json_sender.py  jsonio.py  kalman.py  requirements.txt  state.py  test_camera.py  test_core.py  visualizer.py
.github/workflows/: avisar-qa.yml  testes.yml
tests/: test_cases.json
